--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styled-components": "^4.2.0"
   },
   "scripts": {
+    "prettier:all": "prettier --write src/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "cross-env NODE_ENV=production lint-staged",
