--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.12",
     "styled-components": "^4.2.0"
   },
   "scripts": {
